// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has different relation types 1`] = `
{
  "error": {
    "code": "FIELD_METADATA_RELATION_MALFORMED",
    "message": "Morph relation creation payloads must have the same relation type",
    "userFriendlyMessage": "Morph relation creation payloads must have the same relation type",
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has invalid relation payload 1`] = `
{
  "error": {
    "code": "FIELD_METADATA_RELATION_MALFORMED",
    "message": "Morph relation input transpilation failed",
    "userFriendlyMessage": "Invalid morph relation input",
    "value": [
      {
        "targetObjectMetadataId": Any<String>,
        "type": "ONE_TO_MANY",
      },
    ],
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload has several references to same object metadata 1`] = `
{
  "error": {
    "code": "FIELD_METADATA_RELATION_MALFORMED",
    "message": "Morph relation creation payloads must have only relation to the same object metadata",
    "userFriendlyMessage": "Morph relation creation payloads must only contain relation to the same object metadata",
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is empty array 1`] = `
{
  "error": {
    "code": "FIELD_METADATA_RELATION_MALFORMED",
    "message": "Morph relation creation payloads are empty",
    "userFriendlyMessage": "At least one relation is require",
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when morphRelationsCreationPayload is missing 1`] = `
{
  "error": {
    "code": "INVALID_FIELD_INPUT",
    "message": "Relation creation payload is required",
    "userFriendlyMessage": "Relation creation payload is required",
    "value": undefined,
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Failure cases should fail when target object metadata is not found 1`] = `
{
  "error": {
    "code": "FIELD_METADATA_RELATION_MALFORMED",
    "message": "Morph relation input transpilation failed",
    "userFriendlyMessage": "Invalid morph relation input",
    "value": [
      {
        "targetFieldIcon": "IconPet",
        "targetFieldLabel": "Pet",
        "targetObjectMetadataId": Any<String>,
        "type": "ONE_TO_MANY",
      },
    ],
  },
  "status": "fail",
}
`;

exports[`fromCreateFieldInputToFlatFieldMetadatasToCreate MORPH_RELATION test suite Success cases should create morph relation field metadata with valid input on rocket object to pet object 1`] = `
{
  "result": {
    "flatFieldMetadatas": [
      {
        "createdAt": Any<ClockDate>,
        "defaultValue": null,
        "description": "new field description",
        "flatRelationTargetFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "new field description",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": {
              "applicationId": null,
              "createdAt": Any<String>,
              "description": null,
              "duplicateCriteria": null,
              "flatFieldMetadatas": [],
              "icon": "IconCat",
              "id": Any<String>,
              "imageIdentifierFieldMetadataId": null,
              "isActive": true,
              "isAuditLogged": true,
              "isCustom": true,
              "isLabelSyncedWithName": false,
              "isRemote": false,
              "isSearchable": true,
              "isSystem": false,
              "isUIReadOnly": false,
              "labelIdentifierFieldMetadataId": Any<String>,
              "labelPlural": "Pets",
              "labelSingular": "Pet",
              "namePlural": "pets",
              "nameSingular": "pet",
              "shortcut": null,
              "standardId": null,
              "standardOverrides": null,
              "targetTableName": "DEPRECATED",
              "universalIdentifier": Any<String>,
              "updatedAt": Any<String>,
              "workspaceId": Any<String>,
            },
            "icon": "IconRelationOneToMany",
            "id": Any<String>,
            "isActive": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "isUnique": null,
            "label": "newFieldLabel",
            "morphId": Any<String>,
            "name": "newFieldPets",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "relationType": "ONE_TO_MANY",
            },
            "standardId": null,
            "standardOverrides": null,
            "type": "MORPH_RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": {
            "applicationId": null,
            "createdAt": Any<String>,
            "description": "A rocket",
            "duplicateCriteria": null,
            "flatFieldMetadatas": [],
            "icon": "IconRocket",
            "id": Any<String>,
            "imageIdentifierFieldMetadataId": null,
            "isActive": true,
            "isAuditLogged": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isRemote": false,
            "isSearchable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "labelIdentifierFieldMetadataId": Any<String>,
            "labelPlural": "Rockets",
            "labelSingular": "Rocket",
            "namePlural": "rockets",
            "nameSingular": "rocket",
            "shortcut": null,
            "standardId": null,
            "standardOverrides": null,
            "targetTableName": "DEPRECATED",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "icon": "IconPet",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": null,
          "label": "Pet",
          "morphId": null,
          "name": "pet",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "joinColumnName": "petId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "standardId": null,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "flatRelationTargetObjectMetadata": {
          "applicationId": null,
          "createdAt": Any<String>,
          "description": null,
          "duplicateCriteria": null,
          "flatFieldMetadatas": [],
          "icon": "IconCat",
          "id": Any<String>,
          "imageIdentifierFieldMetadataId": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataId": Any<String>,
          "labelPlural": "Pets",
          "labelSingular": "Pet",
          "namePlural": "pets",
          "nameSingular": "pet",
          "shortcut": null,
          "standardId": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "icon": "IconRelationOneToMany",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": null,
        "label": "newFieldLabel",
        "morphId": Any<String>,
        "name": "newFieldPets",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "relationType": "ONE_TO_MANY",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      {
        "createdAt": Any<ClockDate>,
        "defaultValue": null,
        "description": null,
        "flatRelationTargetFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "new field description",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": {
            "applicationId": null,
            "createdAt": Any<String>,
            "description": null,
            "duplicateCriteria": null,
            "flatFieldMetadatas": [],
            "icon": "IconCat",
            "id": Any<String>,
            "imageIdentifierFieldMetadataId": null,
            "isActive": true,
            "isAuditLogged": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isRemote": false,
            "isSearchable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "labelIdentifierFieldMetadataId": Any<String>,
            "labelPlural": "Pets",
            "labelSingular": "Pet",
            "namePlural": "pets",
            "nameSingular": "pet",
            "shortcut": null,
            "standardId": null,
            "standardOverrides": null,
            "targetTableName": "DEPRECATED",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "icon": "IconRelationOneToMany",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": null,
          "label": "newFieldLabel",
          "morphId": Any<String>,
          "name": "newFieldPets",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": null,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "flatRelationTargetObjectMetadata": {
          "applicationId": null,
          "createdAt": Any<String>,
          "description": "A rocket",
          "duplicateCriteria": null,
          "flatFieldMetadatas": [],
          "icon": "IconRocket",
          "id": Any<String>,
          "imageIdentifierFieldMetadataId": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataId": Any<String>,
          "labelPlural": "Rockets",
          "labelSingular": "Rocket",
          "namePlural": "rockets",
          "nameSingular": "rocket",
          "shortcut": null,
          "standardId": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "icon": "IconPet",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": null,
        "label": "Pet",
        "morphId": null,
        "name": "pet",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "petId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      {
        "createdAt": Any<ClockDate>,
        "defaultValue": null,
        "description": "new field description",
        "flatRelationTargetFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": null,
          "flatRelationTargetFieldMetadata": {
            "createdAt": Any<ClockDate>,
            "defaultValue": null,
            "description": "new field description",
            "flatRelationTargetFieldMetadata": null,
            "flatRelationTargetObjectMetadata": {
              "applicationId": null,
              "createdAt": Any<String>,
              "description": "A company",
              "duplicateCriteria": null,
              "flatFieldMetadatas": [],
              "icon": "IconBuildingSkyscraper",
              "id": Any<String>,
              "imageIdentifierFieldMetadataId": null,
              "isActive": true,
              "isAuditLogged": true,
              "isCustom": false,
              "isLabelSyncedWithName": false,
              "isRemote": false,
              "isSearchable": true,
              "isSystem": false,
              "isUIReadOnly": false,
              "labelIdentifierFieldMetadataId": Any<String>,
              "labelPlural": "Companies",
              "labelSingular": "Company",
              "namePlural": "companies",
              "nameSingular": "company",
              "shortcut": "C",
              "standardId": Any<String>,
              "standardOverrides": null,
              "targetTableName": "DEPRECATED",
              "universalIdentifier": Any<String>,
              "updatedAt": Any<String>,
              "workspaceId": Any<String>,
            },
            "icon": "IconRelationOneToMany",
            "id": Any<String>,
            "isActive": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isNullable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "isUnique": null,
            "label": "newFieldLabel",
            "morphId": Any<String>,
            "name": "newFieldCompanies",
            "objectMetadataId": Any<String>,
            "options": null,
            "relationTargetFieldMetadataId": Any<String>,
            "relationTargetObjectMetadataId": Any<String>,
            "settings": {
              "relationType": "ONE_TO_MANY",
            },
            "standardId": null,
            "standardOverrides": null,
            "type": "MORPH_RELATION",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<ClockDate>,
            "workspaceId": Any<String>,
          },
          "flatRelationTargetObjectMetadata": {
            "applicationId": null,
            "createdAt": Any<String>,
            "description": "A rocket",
            "duplicateCriteria": null,
            "flatFieldMetadatas": [],
            "icon": "IconRocket",
            "id": Any<String>,
            "imageIdentifierFieldMetadataId": null,
            "isActive": true,
            "isAuditLogged": true,
            "isCustom": true,
            "isLabelSyncedWithName": false,
            "isRemote": false,
            "isSearchable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "labelIdentifierFieldMetadataId": Any<String>,
            "labelPlural": "Rockets",
            "labelSingular": "Rocket",
            "namePlural": "rockets",
            "nameSingular": "rocket",
            "shortcut": null,
            "standardId": null,
            "standardOverrides": null,
            "targetTableName": "DEPRECATED",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "icon": "IconBuilding",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": null,
          "label": "Company",
          "morphId": null,
          "name": "company",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "joinColumnName": "companyId",
            "onDelete": "SET_NULL",
            "relationType": "MANY_TO_ONE",
          },
          "standardId": null,
          "standardOverrides": null,
          "type": "RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "flatRelationTargetObjectMetadata": {
          "applicationId": null,
          "createdAt": Any<String>,
          "description": "A company",
          "duplicateCriteria": null,
          "flatFieldMetadatas": [],
          "icon": "IconBuildingSkyscraper",
          "id": Any<String>,
          "imageIdentifierFieldMetadataId": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": false,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataId": Any<String>,
          "labelPlural": "Companies",
          "labelSingular": "Company",
          "namePlural": "companies",
          "nameSingular": "company",
          "shortcut": "C",
          "standardId": Any<String>,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "icon": "IconRelationOneToMany",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": null,
        "label": "newFieldLabel",
        "morphId": Any<String>,
        "name": "newFieldCompanies",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "relationType": "ONE_TO_MANY",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "MORPH_RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      {
        "createdAt": Any<ClockDate>,
        "defaultValue": null,
        "description": null,
        "flatRelationTargetFieldMetadata": {
          "createdAt": Any<ClockDate>,
          "defaultValue": null,
          "description": "new field description",
          "flatRelationTargetFieldMetadata": null,
          "flatRelationTargetObjectMetadata": {
            "applicationId": null,
            "createdAt": Any<String>,
            "description": "A company",
            "duplicateCriteria": null,
            "flatFieldMetadatas": [],
            "icon": "IconBuildingSkyscraper",
            "id": Any<String>,
            "imageIdentifierFieldMetadataId": null,
            "isActive": true,
            "isAuditLogged": true,
            "isCustom": false,
            "isLabelSyncedWithName": false,
            "isRemote": false,
            "isSearchable": true,
            "isSystem": false,
            "isUIReadOnly": false,
            "labelIdentifierFieldMetadataId": Any<String>,
            "labelPlural": "Companies",
            "labelSingular": "Company",
            "namePlural": "companies",
            "nameSingular": "company",
            "shortcut": "C",
            "standardId": Any<String>,
            "standardOverrides": null,
            "targetTableName": "DEPRECATED",
            "universalIdentifier": Any<String>,
            "updatedAt": Any<String>,
            "workspaceId": Any<String>,
          },
          "icon": "IconRelationOneToMany",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "isUnique": null,
          "label": "newFieldLabel",
          "morphId": Any<String>,
          "name": "newFieldCompanies",
          "objectMetadataId": Any<String>,
          "options": null,
          "relationTargetFieldMetadataId": Any<String>,
          "relationTargetObjectMetadataId": Any<String>,
          "settings": {
            "relationType": "ONE_TO_MANY",
          },
          "standardId": null,
          "standardOverrides": null,
          "type": "MORPH_RELATION",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
        "flatRelationTargetObjectMetadata": {
          "applicationId": null,
          "createdAt": Any<String>,
          "description": "A rocket",
          "duplicateCriteria": null,
          "flatFieldMetadatas": [],
          "icon": "IconRocket",
          "id": Any<String>,
          "imageIdentifierFieldMetadataId": null,
          "isActive": true,
          "isAuditLogged": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isRemote": false,
          "isSearchable": true,
          "isSystem": false,
          "isUIReadOnly": false,
          "labelIdentifierFieldMetadataId": Any<String>,
          "labelPlural": "Rockets",
          "labelSingular": "Rocket",
          "namePlural": "rockets",
          "nameSingular": "rocket",
          "shortcut": null,
          "standardId": null,
          "standardOverrides": null,
          "targetTableName": "DEPRECATED",
          "universalIdentifier": Any<String>,
          "updatedAt": Any<String>,
          "workspaceId": Any<String>,
        },
        "icon": "IconBuilding",
        "id": Any<String>,
        "isActive": true,
        "isCustom": true,
        "isLabelSyncedWithName": false,
        "isNullable": true,
        "isSystem": false,
        "isUIReadOnly": false,
        "isUnique": null,
        "label": "Company",
        "morphId": null,
        "name": "company",
        "objectMetadataId": Any<String>,
        "options": null,
        "relationTargetFieldMetadataId": Any<String>,
        "relationTargetObjectMetadataId": Any<String>,
        "settings": {
          "joinColumnName": "companyId",
          "onDelete": "SET_NULL",
          "relationType": "MANY_TO_ONE",
        },
        "standardId": null,
        "standardOverrides": null,
        "type": "RELATION",
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
    ],
    "indexMetadatas": [
      {
        "createdAt": Any<ClockDate>,
        "flatIndexFieldMetadatas": [
          {
            "createdAt": Any<ClockDate>,
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "indexMetadataId": Any<String>,
            "order": 0,
            "updatedAt": Any<ClockDate>,
          },
        ],
        "id": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_f687e4e4252800dddd8e5518362",
        "objectMetadataId": Any<String>,
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
      {
        "createdAt": Any<ClockDate>,
        "flatIndexFieldMetadatas": [
          {
            "createdAt": Any<ClockDate>,
            "fieldMetadataId": Any<String>,
            "id": Any<String>,
            "indexMetadataId": Any<String>,
            "order": 0,
            "updatedAt": Any<ClockDate>,
          },
        ],
        "id": Any<String>,
        "indexType": "BTREE",
        "indexWhereClause": null,
        "isCustom": true,
        "isUnique": false,
        "name": "IDX_cb15d901e889e25d0a9acecb595",
        "objectMetadataId": Any<String>,
        "universalIdentifier": Any<String>,
        "updatedAt": Any<ClockDate>,
        "workspaceId": Any<String>,
      },
    ],
  },
  "status": "success",
}
`;
